--- a/generic-indexer/static/index.html
+++ b/generic-indexer/static/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>NEWW Women Writers</title>
+  <title>Timbuctoo search</title>
   <link rel="stylesheet" href="/bootstrap.min.css" />
-
+  <link rel="stylesheet" href="/hi-style.css" />
+  <link rel="stylesheet" href="/bootstrap-theme.min.css" />
+  <link rel="stylesheet" href="/hi-faceted-search.css" />
 
 </head>
 <body>
 <div id="app">
 </div>
 </body>
+<script src="/globals.js"></script>
 
 <script src="/react-libs.js"></script>
 <script src="/index.js"></script>
