adds logo and style to navbar.

--- a/generic-indexer/static/index.html
+++ b/generic-indexer/static/index.html
@@ -7,7 +7,27 @@
   <link rel="stylesheet" href="/hi-style.css" />
   <link rel="stylesheet" href="/bootstrap-theme.min.css" />
   <link rel="stylesheet" href="/hi-faceted-search.css" />
+  <style>
+    .navbar.navbar-default {
+      background: none;
+      background-color: #00bfa5;
+      border: 0;
+      border-radius: 0;
+      font-size: 16px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    }
 
+    .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+      background: none;
+      background-color:  #00bfa5;
+      color: #fafafa;
+      font-weight: 500;
+      border-bottom: 2px solid #f2fc90;
+    }
+    .navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover{
+      color: #000
+    }
+  </style>
 </head>
 <body>
 <div id="app">
