new style for timbuctoo search.

--- a/generic-indexer/static/index.html
+++ b/generic-indexer/static/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Timbuctoo search</title>
-  <link rel="stylesheet" href="/bootstrap.min.css" />
-  <link rel="stylesheet" href="/hi-style.css" />
-  <link rel="stylesheet" href="/bootstrap-theme.min.css" />
-  <link rel="stylesheet" href="/hi-faceted-search.css" />
+  <link href="/bootstrap.min.css" rel="stylesheet">
+  <link href="/hi-style.css" rel="stylesheet" type="text/css">
+  <link href="/hi-interface.css" rel="stylesheet" type="text/css">
+  <link href="/hi-faceted-search.css" rel="stylesheet" type="text/css">
+
   <style>
     .navbar.navbar-default {
       background: none;
